# auto_argparser

./: README.md  setup.cfg
auto_argparser/: LICENSE  README.md  auto_argparser.py  requirements.txt  setup.cfg  test_auto_argparser.py
auto_argparser/src/auto_argparser/: README.md
auto_argparser/src/auto_argparser/examples/: exponential_moving_average.py  hello_auto_argparser.py
auto_argparser/src/tests/: test_auto_argparser.py
auto_argparser/tests/: test_auto_argparser.py
brain_utils/: README.md  capture_output.py  files.py  string_utils.py  temp_files.py  test_capture_output.py  test_string_utils.py  test_temp_files.py  type_utils.py
src/auto_argparser/examples/: exponential_moving_average.py  hello_auto_argparser.py
src/auto_argparser/tests/: test_auto_argparser.py
