[metadata]
name = auto_argparser-shane_BC
version = 0.0.4
author = Shane Fisher
author_email = shane.fisher@braincorp.com
description = Tool for parsing command line arguments into python function arguments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/braincorp/auto_argparser
project_urls =
    Org page = https://github.com/braincorp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
